<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PassKeeper</string>

    <!-- Databases -->
        <string name="title_activity_choose_database">Databases</string>
        <!-- Open Database Window-->
            <string name="dialog_title_open_database">Open Database</string>
            <string name="dialog_message_open_database">Please insert a password!</string>
            <string name="hint_database_pwd">Database Password</string>
            <string name="dialog_negative_button">Cancel</string>
            <string name="dialog_positive_button_default">Ok</string>

            <!-- False Password -->
                <string name="toast_message_wrong_password">Wrong password!</string>

        <!-- Create Database -->
            <string name="title_activity_create_database">Create Database</string>
            <string name="hint_database_name">Database Name</string>
            <!-- <string name="hint_database_pwd">Database Password</string> -->
            <!-- <string name="image_button_description_show_pwd">Show Password</string> -->

            <!-- No Database Name or Password-->
                <string name="dialog_title_missing_data">Missing required data!</string>
                <string name="dialog_message_database_required_data">The database name must have at least 1 letter and the password must have 8 letters!</string>
                <!-- <string name="dialog_positive_button_default">Ok</string> -->

        <!-- Context menu Database -->
            <!-- Rename Database menu -->
                <!-- TODO Rename Menü funktioniert noch nicht, schätzungsweise selbes Problem, wie bei Change Database Password-->
                <string name="contextmenu_item_update_database_name">Rename Database</string>
                <string name="dialog_title_change_database_name">Change Database Name</string>
                <string name="hint_database_new_name">Please insert a new name</string>


            <!-- Change Database Password -->
                <!-- TODO Change Password Logik funktioniert noch nicht, Absturz beim nicht eingeben statt Fehlermeldung -->
                <string name="contextmenu_item_update_database_password">Change Password</string>
                <string name="dialog_title_change_database_pwd">Change Password</string>
                <string name="hint_database_pwd_old">Old Password</string>
                <string name="hint_database_pwd_new">New Password</string>
                <string name="hint_database_pwd_repeat">Repeat Password</string>
                <string name="image_button_description_show_pwd">Show Password</string>
                <!-- <string name="dialog_negative_button">Cancel</string> -->
                <!-- <string name="dialog_positive_button_default">Ok</string> -->

            <!-- Delete Database -->
                <string name="contextmenu_item_delete_database">Delete Database</string>
                <string name="dialog_title_warning">WARNING!</string>
                <string name="dialog_message_delete_database_warning_message">Attenion! If you proceed to delete this database, you will lose <b>ALL</b> your data! Including <b>all your credentials and categories</b>. This <b>CAN NOT</b> be undone. If you wish to continue, insert your password and and hit the delete button.</string>
                <!-- <string name="hint_database_pwd">Database Password</string> -->
                <!-- <string name="dialog_negative_button">Cancel</string> -->
                <string name="dialog_positive_button_delete">Delete Forever!</string>

    <!-- Cartegories -->
        <!-- Data in Category -->
            <array name="array_default_category_name">
                <item>Internet</item>
                <item>Networking</item>
                <item>Shopping</item>
            </array>

        <!-- Context menu Category -->
            <!-- Rename -->
                <string name="contextmenu_item_update_category_name">Rename Category</string>
                <!-- TODO Context menu "Rename" hinzufügen -->
            <!-- Delete -->
                <string name="contextmenu_item_delete_category">Delete Category</string>
                <string name="dialog_message_delete_category_warning_message">Attenion! If you proceed to delete this Category, you will lose <b>ALL</b> your Entries! This <b>CAN NOT</b> be undone. If you wish to continue, insert your password and and hit the delete button.</string>
                <!-- <string name="dialog_negative_button">Cancel</string> -->
                <!-- <string name="dialog_positive_button_delete">Delete Forever!</string> -->

        <!-- Add Category -->
            <string name="dialog_title_add_category">Add Category</string>
            <string name="dialog_message_add_category">Create a new category!</string>
            <string name="hint_category_name">Category Name</string>
            <!-- <string name="dialog_negative_button">Cancel</string> -->
            <!-- <string name="dialog_positive_button_default">Ok</string> -->

    <!-- Entries -->
        <!-- Dialog at open -->
        <string name="dialog_title_create_entry">No data found!</string>
        <string name="dialog_message_create_entry">There is no data available for this category. Would you like to create one?</string>
        <!-- <string name="dialog_negative_button">Cancel</string> -->
        <!-- <string name="dialog_positive_button_default">Ok</string> -->

        <!-- Add Entry -->
            <string name="title_activity_create_entry">Create Entry</string>
            <string name="hint_entry_title">Title</string>
            <string name="hint_entry_username">Username</string>
            <string name="hint_entry_pwd">Password</string>
            <!-- <string name="image_button_description_show_pwd">Show Password</string> -->
            <string name="hint_entry_note">Notes</string>

            <!-- Sichern der Daten -->
                <string name="dialog_loading_message_encrypting_data">Encrypting data. This may take some time.</string>

            <!-- Missing required Data -->
                <!-- <string name="dialog_title_missing_data">Missing required data!</string> -->
                <string name="dialog_message_entry_required_data">At least the title and a password must be given!</string>
                <!-- <string name="dialog_positive_button_default">Ok</string> -->

        <!-- Open Entry -->
            <string name="dialog_loading_message_decrypting_data">Decrypting data. This may take some time.</string>

        <!-- Update Entry -->
            <string name="title_activity_update_entry">Update Entry</string>
            <!-- <string name="hint_entry_title">Title</string> -->
            <!-- <string name="hint_entry_username">Username</string>-->
            <!--<string name="hint_entry_pwd">Password</string>-->
            <!-- <string name="image_button_description_show_pwd">Show Password</string> -->
            <!--  <string name="hint_entry_note">Notes</string>-->



    <!-- Im Programm nicht gefunden -->
    <string name="dialog_loading_message_saving_data">Persisting data</string>
    <string name="hint_entry_pwd_repeat">Repeat Password</string>

    <!-- Animation zum laden? -->
    <string name="textview_modified">modified on:</string>

    <string name="menu_item_title_add_database">Add a new database!</string>
    <string name="menu_item_title_add_category">Add a new category!</string>
    <string name="menu_item_title_create_entry">Add new credentials!</string>
    <string name="menu_item_title_update_entry">Add new credentials!</string>

</resources>
