<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.szut.passkeeper.Activity.CreateEntryActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEntryTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_entry_title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEntryUsername"
        android:layout_below="@+id/editTextEntryTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_entry_username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEntryPwd"
        android:layout_below="@+id/editTextEntryUsername"
        android:layout_alignParentStart="true"
        android:inputType="textPassword"
        android:hint="@string/hint_entry_pwd"
        android:layout_toStartOf="@+id/imageButtonDisplayPwd" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonDisplayPwd"
        android:layout_below="@+id/editTextEntryUsername"
        android:layout_alignEnd="@+id/editTextEntryUsername"
        android:src="@android:drawable/ic_menu_view"
        android:layout_above="@+id/editTextEntryNote" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEntryNote"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_entry_note"
        android:layout_alignEnd="@+id/imageButtonDisplayPwd"
        android:layout_below="@+id/editTextEntryPwd" />

</RelativeLayout>
