<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <EditText
        android:id="@+id/editTextDatabaseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/hint_database_name" />

    <EditText
        android:id="@+id/editTextDatabasePwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextDatabaseName"
        android:layout_toStartOf="@+id/imageButtonDisplayPwd"
        android:hint="@string/hint_database_pwd"
        android:inputType="textPassword" />

    <ImageButton
        android:id="@+id/imageButtonDisplayPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextDatabasePwd"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/editTextDatabasePwd"
        android:contentDescription="@string/image_button_description_show_pwd"
        android:src="@android:drawable/ic_menu_view" />

</RelativeLayout>
