<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:padding="20dp">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextOldDbPwd"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/imageButtonViewPwd"
        android:hint="@string/hint_database_pwd_old"
        android:layout_alignEnd="@+id/editTextNewDbPwd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextNewDbPwd"
        android:layout_below="@+id/editTextOldDbPwd"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_database_pwd_new"
        android:layout_alignEnd="@+id/imageButtonViewPwd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextNewPwdDbRepeat"
        android:layout_below="@+id/editTextNewDbPwd"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_entry_pwd_repeat"
        android:layout_toStartOf="@+id/imageButtonViewPwd" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonViewPwd"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/editTextNewPwdDbRepeat"
        android:src="@android:drawable/ic_menu_view"
        android:layout_alignTop="@+id/editTextNewPwdDbRepeat" />

</RelativeLayout>